# ai-production-workshop

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  cli.py  docker-compose.yml  flake.nix  pyproject.toml  server.py
.github/workflows/: _build-artifacts.yml  _flake-check.yml  _oci.yml  _publish.yml  oci.yml  release.yml
.workshop/: adr-template.md  coverage.md  plan.md  requirements.md  security-checklist.md
.workshop/adr/: 0001-build-engine-from-scratch.md  0002-swappable-sandbox.md  0003-in-memory-session-store.md
agent/: __init__.py
agent/core/: __init__.py  audit.py  context.py  loop.py  observability.py  policy.py  session.py
agent/evals/: __init__.py  cases.py  harness.py  run.py
agent/memory/: store.py
agent/sandbox/: __init__.py  runner.py
agent/skills/: __init__.py
agent/skills/data-analysis/: SKILL.md
agent/skills/greeting/: SKILL.md
agent/skills/marketing-assistant/: SKILL.md
agent/skills/ml-training/: SKILL.md
agent/skills/website-shipping/: SKILL.md
agent/tools/: base.py  deploy.py  fs.py  install.py  memory.py  python.py  registry.py  skills.py  training.py  web.py
docs/: SCALING.md
kubernetes/: agent-claim1-persistentvolumeclaim.yaml  agent-deployment.yaml  agent-ingress.yaml  agent-service.yaml  kustomization.yaml
scripts/: test_suite.py  ws_test.py
slides/: workshop.pptx
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css
web/src/components/: Audit.jsx  Catalog.jsx  Chat.jsx  Files.jsx  Memory.jsx  Metrics.jsx  Skills.jsx  (+1 more)
