[project]
name = "workshop-agent"
version = "0.1.0"
description = "A small, didactic agentic loop: skills, tools, memory, sandbox; production-ready."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "certifi>=2024.0.0",
]

[tool.uv]
package = false
